# find_package(re2 REQUIRED PATHS /home/kinling9/packages/re2)
file(GLOB_RECURSE sources *.cpp)
include_directories(${PROJECT_SOURCE_DIR}/src)

add_executable(parser ${sources})
target_link_libraries(parser -static-libgcc -static-libstdc++)
target_link_libraries(parser Boost::iostreams)
target_link_libraries(parser re2::re2) 
target_link_libraries(parser argparse)
target_link_libraries(parser yaml-cpp::yaml-cpp)
target_link_libraries(parser fmt::fmt)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message(STATUS "Configuring for Debug build")
    set_target_properties(parser PROPERTIES OUTPUT_NAME "parser-debug")
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    message(STATUS "Configuring for Release build")
    set_target_properties(parser PROPERTIES OUTPUT_NAME "parser")
endif()
