# find_package(re2 REQUIRED PATHS /home/kinling9/packages/re2)
file(GLOB_RECURSE sources *.cpp)
include_directories(${PROJECT_SOURCE_DIR}/src)

add_executable(slack_tool ${sources})
target_link_libraries(slack_tool -static-libgcc -static-libstdc++)
target_link_libraries(slack_tool Boost::iostreams)
target_link_libraries(slack_tool re2::re2) 
target_link_libraries(slack_tool argparse)
target_link_libraries(slack_tool yaml-cpp::yaml-cpp)
target_link_libraries(slack_tool fmt::fmt)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message(STATUS "Configuring for Debug build")
    set_target_properties(slack_tool PROPERTIES OUTPUT_NAME "slack_tool-debug")
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    message(STATUS "Configuring for Release build")
    set_target_properties(slack_tool PROPERTIES OUTPUT_NAME "slack_tool")
endif()
